bugfix: slider arrow cropped in safari

--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -9,8 +9,8 @@
   font-size: 0;
   border: 0;
   z-index: 2;
-  width: 38px;
-  height: 66px;
+  // width: 38px;
+  // height: 66px;
   transition: 0.4s;
 
   &:hover {
